# DJangoB3AssetMonitoringAPI

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
assets/: apps.py  config.py  cron.py  email.py  models.py  redis.py  serializers.py  utils.py  views.py  viewset.py
b3assetmonitoring/: asgi.py  settings.py  urls.py  wsgi.py
