[tool.poetry]
name = "djangob3assetmonitoringapi"
version = "0.1.0"
description = ""
authors = ["Maicon Renildo <maicon.renildo1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
djangorestframework = "^3.13.1"
httpx = "^0.23.0"
python-dotenv = "^0.20.0"
pydantic = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
